Update RegistrationClient